// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`engage > core > hocs > withNavigation should inject a single property with the navigation into the component 1`] = `
<pre
  data-testid="wrapped-props"
>
  {"navigation":{},"someProp":true}
</pre>
`;

exports[`engage > core > hocs > withNavigation should inject the navigation properties into the component 1`] = `
<pre
  data-testid="wrapped-props"
>
  {"someProp":true}
</pre>
`;
